--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -100,7 +101,8 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
         </dependency>
-    </dependencies>
+
+</dependencies>
 
     <build>
         <resources>
