--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #Application port
-server.port=8888
+server.port=8080
+
 
 #Database connection
-spring.datasource.url=jdbc:h2:mem:practice_db
+spring.datasource.url=jdbc:h2:mem:belltest_db
 spring.datasource.username=sa
-spring.datasource.password=123456
+#spring.datasource.password=123456
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.sql-script-encoding=UTF-8
@@ -19,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=
 #spring.jpa.hibernate.use_sql_comments=true
 #
 #logging.level.org.hibernate=DEBUG
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console.html
